@@ -5,8 +5,8 @@ wrk - a HTTP benchmarking tool
   design with scalable event notification systems such as epoll and kqueue.
 
   An optional LuaJIT script can perform HTTP request generation, response
-  processing, and custom reporting. Several example scripts are located in
-  scripts/
+  processing, and custom reporting. Details are available in SCRIPTING and
+  several examples are located in scripts/
 
 Basic Usage
 
@@ -26,65 +26,6 @@ Basic Usage
   Requests/sec: 748868.53
   Transfer/sec:    606.33MB
 
-Scripting
-
-  wrk's public Lua API is:
-
-    init     = function(args)
-    request  = function()
-    response = function(status, headers, body)
-    done     = function(summary, latency, requests)
-
-    wrk = {
-      scheme  = "http",
-      host    = "localhost",
-      port    = nil,
-      method  = "GET",
-      path    = "/",
-      headers = {},
-      body    = nil
-    }
-
-    function wrk.format(method, path, headers, body)
-
-      wrk.format returns a HTTP request string containing the passed
-      parameters merged with values from the wrk table.
-
-  The following globals are optional, and if defined must be functions:
-
-    global init     -- called when the thread is initialized
-    global request  -- returning the HTTP message for each request
-    global response -- called with HTTP response data
-    global done     -- called with results of run
-
-  The init() function receives any extra command line arguments for the
-  script which must be separated from wrk arguments with "--".
-
-  The done() function receives a table containing result data, and two
-  statistics objects representing the sampled per-request latency and
-  per-thread request rate. Duration and latency are microsecond values
-  and rate is measured in requests per second.
-
-    latency.min              -- minimum value seen
-    latency.max              -- maximum value seen
-    latency.mean             -- average value seen
-    latency.stdev            -- standard deviation
-    latency:percentile(99.0) -- 99th percentile value
-    latency[i]               -- raw sample value
-
-    summary = {
-      duration = N,  -- run duration in microseconds
-      requests = N,  -- total completed requests
-      bytes    = N,  -- total bytes received
-      errors   = {
-        connect = N, -- total socket connection errors
-        read    = N, -- total socket read errors
-        write   = N, -- total socket write errors
-        status  = N, -- total HTTP status codes > 399
-        timeout = N  -- total request timeouts
-      }
-    }
-
 Benchmarking Tips
 
   The machine running wrk must have a sufficient number of ephemeral ports
@@ -93,11 +34,9 @@ Benchmarking Tips
   than the number of concurrent connections being tested.
 
   A user script that only changes the HTTP method, path, adds headers or
-  a body, will have no performance impact. If multiple HTTP requests are
-  necessary they should be pre-generated and returned via a quick lookup in
-  the request() call. Per-request actions, particularly building a new HTTP
-  request, and use of response() will necessarily reduce the amount of load
-  that can be generated.
+  a body, will have no performance impact. Per-request actions, particularly
+  building a new HTTP request, and use of response() will necessarily reduce
+  the amount of load that can be generated.
 
 Acknowledgements
 
